# Agents-Workflow

./: .gitignore  README.md  pyproject.toml  skills.md
.claude/skills/agentloop-add-runner/: SKILL.md
.claude/skills/agentloop-agent-role/: SKILL.md
.claude/skills/agentloop-decision-rule/: SKILL.md
.claude/skills/agentloop-loop-test/: SKILL.md
.claude/skills/agentloop-store-schema/: SKILL.md
agentloop/: __init__.py  agents.py  cli.py  config.py  eval.py  executor.py  loop.py  memory.py  models.py  registry.py  runner.py  server.py  store.py
docs/: PHASE2-DELIVERY.md
docs/superpowers/specs/: 2026-07-20-phase2-live-dashboard-design.md
tests/: test_accounting.py  test_cli.py  test_control.py  test_eval.py  test_executor.py  test_loop.py  test_memory.py  test_pinned_memory.py  test_server.py  test_store_atomicity.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  styles.css  types.ts  useLiveLoop.ts
web/src/components/: AgentPanel.tsx  EventFeed.tsx  MemoryPanel.tsx  NewTaskForm.tsx  StatBar.tsx  TaskBoard.tsx  TaskDetail.tsx
